--- a/src/components/bloks/Header/Header.css
+++ b/src/components/bloks/Header/Header.css
@@ -1,29 +1,28 @@
 header {
-    color: white;
-    background-color: black;
+    background-color: var(--background-color);
+    color: var(--text-color: );
 }
 .containderHead {
     margin: 0 auto;
     width: calc(100% - 30px);
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    padding: 10px 0 0 0 ;
+    padding: 10px 0 0 0;
 }
 .row {
     margin: 0 auto;
     width: calc(100% - 10px);
     text-align: center;
 }
-.phone{
+.phone {
     display: block;
     max-width: max-content;
-    color: white;
     text-decoration: none;
     margin: 5px 0 5px 0;
     transition: 0.5s;
 }
-.phone:hover{
-    color:  var(--color-hover-link);
+.phone:hover {
+    color: var(--color-hover-link);
     transition: 0.5s;
 }
 .navTopList {
@@ -35,18 +34,16 @@ header {
     text-align: center;
     display: block;
     border: 1px solid white;
-    border-color: #b8b8b8;
+    border-color: var(--border-color);
     border-radius: 0.69231rem;
     width: max-content;
     padding: 5px 10px 5px 10px;
     white-space: nowrap;
 }
-.orderСall:hover{
+.orderСall:hover {
     cursor: pointer;
 }
 
-
-  
 @media (max-width: 992px) {
 }
 
