--- a/src/components/UL/MayModal/MayModaT.css
+++ b/src/components/UL/MayModal/MayModaT.css
@@ -23,7 +23,7 @@
   transform: 1000ms;
 }
 .buttomCloseModal {
-  background: var(--color-button);
+  background: red;
   color: white;
   border: 1px solid var(--color-button);
   border-radius: 50%;
