--- a/src/components/UL/Thema/thema.css
+++ b/src/components/UL/Thema/thema.css
@@ -12,12 +12,14 @@
   }
   .my-node-enter-active {
     opacity: 1;
-    transition: opacity 200ms;
+    transition: all 500ms;
+    transform: scale(1) translate(50%);
   }
   .my-node-exit {
     opacity: 1;
   }
   .my-node-exit-active {
     opacity: 0;
-    transition: opacity 200ms;
+    transition: all 500ms;
+    transform: scale(1) translate(50%);
   }
