--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -21,22 +21,31 @@ font-family: 'Raleway', sans-serif;
     --color-button-hover: rgb(236, 19, 88);
 }
 
-html[data-theme="light"]{
+html[data-theme="light"] {
     --link-color: black;
-    --background-color: white;
     --text-color: black;
-    --color-hover-link: rgba(191, 21, 75, 1);
-    --border-color: #b8b8b8
+
+    --text-fon-color: black;
+    --link-fon-color: black;
+
+    --background-color: white;
+    --border-color: #b8b8b8;
+
+    --hover-link-color: rgb(250, 1, 1);
 }
 
-html[data-theme="dark"]{
-    --link-color: white;
+html[data-theme="dark"] {
+    --link-color: black;
+    --text-color: black;
+
+    --text-fon-color: white;
+    --link-fon-color: white;
+
     --background-color: black;
-    --text-color: white;
-    --color-hover-link: rgba(191, 21, 75, 1);
-    --border-color: #b8b8b8
-}
+    --border-color: #b8b8b8;
 
+    --hover-link-color: rgba(191, 21, 75, 1);
+}
 
 *,
 *::after,
@@ -44,12 +53,16 @@ html[data-theme="dark"]{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Comfortaa', cursive;
-    font-size: calc((120vw - 470px) / (1980 - 470) * (16 - 10) + 11px);
-    color: var(--text-color);
+    font-family: "Comfortaa", cursive;
+    font-size: calc((90vw - 470px) / (1980 - 470) * (16 - 10) + 9px);
 }
-
+@media (max-width: 928px) {
+    *,
+    *::after,
+    *::before {
+        font-size: calc((90vw - 470px) / (1980 - 470) * (16 - 10) + 12px);
+    }
+}
 a {
-    color: var(--link-color);
     text-decoration: none;
 }
