--- a/src/components/bloks/Header/Munu/Menu.css
+++ b/src/components/bloks/Header/Munu/Menu.css
@@ -2,13 +2,13 @@
     display: flex;
     justify-content: center;
 }
-.menu > ul > li{
+.menu > ul > li {
     height: 30px;
     display: block;
 }
-.menu li:hover .sub_menu{
+.menu li:hover .sub_menu {
     transition: all 500ms;
-    transform:  translate(0px,0);
+    transform: rotateY(0deg);
 }
 
 .sub_menu a {
@@ -16,8 +16,8 @@
     margin: 5px 29px 5px 0;
 }
 .sub_menu {
+    transform: rotateY(90deg);
     margin-top: 5px;
-    transform:  translate(100%,0);
     transition: all 500ms;
     position: absolute;
     background-color: white;
@@ -28,7 +28,7 @@
     color: black;
     border: 1px solid rgba(20, 110, 205, 0.5);
 }
-.sub_menu a{
+.sub_menu a {
     text-align: left;
 }
 .sub_menu a {
@@ -38,4 +38,156 @@
 .sub_menu a:hover {
     color: var(--hover-link-color-menu);
     transition: 0.5s;
+}
+.menu_mob_openMenu_label,
+.close_menu,
+.logoMenuOpne {
+    display: none;
+}
+@media (max-width: 928px) {
+    .menu_mob_openMenu_label,
+    .close_menu,
+    .logoMenuOpne {
+        display: block;
+    }
+    .close_menu {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        right: -10px;
+        background-color: rgb(225, 127, 127);
+        border-radius: 50px;
+    }
+
+    .menu a {
+        color: black;
+        background-color: black;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+    .menu_mob_open {
+        position: absolute;
+        margin: 0;
+        top: 0;
+        left: 0;
+        background-color: white;
+        width: 80%;
+        height: 100%;
+        z-index: 2;
+        transform: all rotateY(100deg);
+        transform-origin: left;
+        transition: 500ms;
+    }
+    .animation_menu_open {
+        transform: all rotateY(0deg);
+        transition: 500ms;
+    }
+    .manu_close {
+        position: absolute;
+        left: -500px;
+        transform: all rotateX(0deg);
+        transition: 500ms;
+    }
+    .menu_mob_open a {
+        margin-bottom: 0;
+        margin-left: 0px;
+        width: 100%;
+        display: block;
+        color: black;
+        height: 50px;
+        border: 1px solid rgb(0, 0, 0, 0.6);
+        display: flex;
+        align-items: center;
+        padding-left: 10%;
+    }
+
+    .menu_mob_open_label {
+        position: absolute;
+        left: 0;
+        display: block;
+        width: 20%;
+        height: 50px;
+        background-color: var(--background-color);
+        color: white;
+        margin-top: -50px;
+    }
+
+    .menu_mob_open_label span:first-child {
+        content: "";
+        display: block;
+        width: 45px;
+        margin-left: 25px;
+        margin-top: 14px;
+        height: 2px;
+        background-color: var(--background-color-menu);
+    }
+
+    .menu_mob_open_label span:nth-child(2) {
+        content: "";
+        display: block;
+        width: 35px;
+        margin-left: 25px;
+        margin-top: 8px;
+        height: 2px;
+        background-color: var(--background-color-menu);
+    }
+
+    .menu_mob_open_label span:nth-child(3) {
+        content: "";
+        display: block;
+        width: 45px;
+        margin-left: 25px;
+        margin-top: 8px;
+        height: 2px;
+        background-color: var(--background-color-menu);
+    }
+    .menu_mob_openMenu_label img {
+        width: 65px;
+    }
+    .menu_mob_openMenu_label {
+        display: block;
+        border: 1px solid black;
+        width: 50%;
+        height: 58px;
+        background-color: white;
+        color: black;
+        margin-top: -10px;
+        z-index: 5;
+    }
+
+    .menu_mob_openMenu_label span:first-child {
+        content: "";
+        display: block;
+        width: 25px;
+        margin-left: 25px;
+        margin-top: 23px;
+        height: 1px;
+        background-color: black;
+    }
+
+    .menu_mob_openMenu_label span:nth-child(2) {
+        content: "";
+        display: block;
+        width: 15px;
+        margin-left: 25px;
+        margin-top: 6px;
+        height: 1px;
+        background-color: black;
+    }
+
+    .menu_mob_openMenu_label span:nth-child(3) {
+        content: "";
+        display: block;
+        width: 20px;
+        margin-left: 25px;
+        margin-top: 6px;
+        height: 1px;
+        background-color: black;
+    }
+    .menu_mob_openMenu_label div:nth-child(4) {
+        padding-left: 45%;
+        margin-top: -15px;
+        text-transform: uppercase;
+    }
 }
