--- a/src/components/bloks/Thema/thema.css
+++ b/src/components/bloks/Thema/thema.css
@@ -1,25 +1,31 @@
-.thema{
-    cursor: pointer;
-    max-width: max-content;
+.thema {
+  cursor: pointer;
+  max-width: max-content;
 }
-.thema img{
-    max-width: 20px;
-    max-height: 20px;
+.thema img {
+  max-width: 20px;
+  max-height: 20px;
 }
 
 .my-node-enter {
-    opacity: 0;
+  opacity: 0;
+}
+.my-node-enter-active {
+  opacity: 1;
+  transition: all 500ms;
+  transform: scale(1) translate(50%);
+}
+.my-node-exit {
+  opacity: 1;
+}
+.my-node-exit-active {
+  opacity: 0;
+  transition: all 500ms;
+  transform: scale(1) translate(50%);
+}
+@media (max-width: 928px) {
+  .thema img {
+    max-width: 40px;
+    max-height: 40px;
   }
-  .my-node-enter-active {
-    opacity: 1;
-    transition: all 500ms;
-    transform: scale(1) translate(50%);
-  }
-  .my-node-exit {
-    opacity: 1;
-  }
-  .my-node-exit-active {
-    opacity: 0;
-    transition: all 500ms;
-    transform: scale(1) translate(50%);
-  }
+}
