--- a/src/components/bloks/UserAccount/UserAccount.css
+++ b/src/components/bloks/UserAccount/UserAccount.css
@@ -2,3 +2,10 @@
     width: 20px;
     height: 20px;
 }
+@media (max-width: 928px) {
+    .UserAccountImg{
+      width: 40px;
+      height: 40px;
+    }
+  }
+  
