--- a/src/components/UL/MayModal/MayModaT.css
+++ b/src/components/UL/MayModal/MayModaT.css
@@ -1,9 +1,20 @@
-
+.myModal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
 .myModalContent {
   background: white;
   border-radius: 16px;
-  min-width: 250px;
   margin: 50px;
+  padding: 30px;
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .active {
@@ -20,7 +31,7 @@
   height: 20px;
   margin-left: 96%;
 }
-.buttomCloseModal:hover{
+.buttomCloseModal:hover {
   cursor: pointer;
 }
 
@@ -41,5 +52,3 @@
   transform: scale(0.9);
   transition: opacity 500ms, transform 500ms;
 }
-
-
