--- a/src/components/bloks/RequestСall/RequestСall.css
+++ b/src/components/bloks/RequestСall/RequestСall.css
@@ -2,8 +2,7 @@
     margin-top: -20px;
     color: black;
     padding: 16px;
-    display: grid;
-    grid-template-columns: 1fr;
+    max-width: 300px;
 }
 
 .RCName::after {
@@ -52,4 +51,12 @@
 
 .special-label{
     display: none;
+}
+
+
+@media (max-width: 384px) {
+    .RequestСallContainer input {
+        width: 190px;
+        height: 30px;
+    }
 }
