--- a/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
+++ b/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
@@ -1,5 +1,6 @@
 .block_main_one {
     margin-top: 30px;
+    margin-bottom: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
