--- a/src/components/bloks/bloksMain/Block2/BlockMain2.css
+++ b/src/components/bloks/bloksMain/Block2/BlockMain2.css
@@ -1,18 +1,22 @@
-.BlockMain2{
-    margin-top: 55px;
-  display: flex;
-  justify-content: center;
-}
-.BlockMain2Img1 img{
-    width: 300px;
-    height: 400px;
-}
-.BlockMain2Img2 img{
-    width: 300px;
-    height: 400px;
-}
-.BlockMain2Btn{
-    margin-top: 20%;
-    margin-right: 30px;
+.BlockMain2 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    justify-content: center;
     margin-left: 30px;
+    margin-right: 30px;
+}
+.BlockMain2Img1 img {
+    width: 200px;
+    height: 300px;
+}
+.BlockMain2Img2 img {
+    width: 200px;
+    height: 400px;
+}
+.BlockMain2Btn {
+   
+ 
 }
