--- a/src/components/bloks/bloksMain/Block2/BlockMain2.css
+++ b/src/components/bloks/bloksMain/Block2/BlockMain2.css
@@ -1,22 +1,64 @@
 .BlockMain2 {
-    margin-top: 50px;
+    margin-top: 130px;
     margin-bottom: 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-auto-columns: 100px;
     grid-gap: 20px;
     justify-content: center;
     margin-left: 30px;
     margin-right: 30px;
 }
-.BlockMain2Img1 img {
-    width: 200px;
-    height: 300px;
+.BlockMain2Btn {
+    grid-row: 1;
+    grid-column: 2;
 }
+.BlockMain2Img1 {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    margin-left: -70%;
+    margin-top: -10%;
+}
+.BlockMain2Img2 {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+    margin-left: 70%;
+    margin-top: -10%;
+}
+.BlockMain2Img1,
+.BlockMain2Img1 img {
+    width: 350px;
+    height: 350px;
+}
+.BlockMain2Img2,
 .BlockMain2Img2 img {
-    width: 200px;
-    height: 400px;
+    width: 350px;
+    height: 450px;
 }
 .BlockMain2Btn {
-   
- 
+}
+
+@media (max-width: 928px) {
+    .block_main_one {
+        grid-auto-rows: 1fr;
+        grid-auto-columns: 1fr;
+    }
+    .BlockMain2Img2 {
+        display: none;
+    }
+    .BlockMain2Img1 {
+        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+        margin-left: 0%;
+        margin-top: -10%;
+    }
+    .BlockMain2Img1::after {
+        display: none;
+    }
+    .BlockMain2Img1,
+    .BlockMain2Img1 img {
+        width: 290px;
+        height: 305px;
+    }
+
 }
