--- a/src/components/bloks/bloksMain/bloks.css
+++ b/src/components/bloks/bloksMain/bloks.css
@@ -1,3 +1,6 @@
+.BlockMainImg{
+    cursor: pointer;
+}
 .BlockMainImg::after {
     content: "";
     display: block;
@@ -33,9 +36,13 @@
     top: 0;
     margin-top: 0;
     padding-top: 0;
+    min-width: 300px;
     text-align: center;
     border: 1px solid rgb(175, 152, 152);
     background-color: white;
+    z-index: 1;
+    max-width: 250px;
+    max-height: 250px;
 }
 .BlockMainButton::before {
     margin-top: -13px;
@@ -45,6 +52,7 @@
     width: 110%;
     height: 110%;
     border: 1px solid rgb(175, 152, 152);
+  
 }
 
 .BlockMainButton h4 {
@@ -73,7 +81,5 @@
         margin-left: auto;
         margin-right: auto;
     }
-    .BlockMainButton button{
 
-    }
 }
