--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -83,3 +83,11 @@ a:hover{
 li{
     list-style: none;
 }
+.row1{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.row2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
