--- a/src/components/bloks/ProductList/ProductList.css
+++ b/src/components/bloks/ProductList/ProductList.css
@@ -1,7 +1,49 @@
-.ProductListContainer{
-  text-align: center;
+.ProductListContainer {
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 250px;
+    min-height: 250px;
+    max-heigh: 350px;
+    color: rgba(0, 0, 0, 0.9);
 }
-.ProductListImg{
-    width: 200px;
-    height: 200px;
+
+.ProductListContainer div {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
+}
+
+.productContant {
+    width: 250px;
+}
+
+.ProductListImg {
+    width: 100%;
+    min-width: 100px;
+    max-width: 200px;
+    height: auto;
+    z-index: -1;
+}
+
+.ProductListContainer:before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -2;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    width: 250px;
+    height: 55%;
+    margin-top: -10px;
+
+}
+
+.productIcon {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+}
+
+.productIcon {
+    position: absolute;
 }
