--- a/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
+++ b/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
@@ -10,8 +10,10 @@
 }
 .block_main_one img,
 .block_main_one div {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    min-width: 200px;
+    max-width: 400px;
+    height: auto;
     cursor: pointer;
 }
 @media (max-width: 1037px) {
