--- a/src/pages/ProductsPage/ProductsCatalog.css
+++ b/src/pages/ProductsPage/ProductsCatalog.css
@@ -11,6 +11,7 @@
     border-bottom: 1px solid black;
 }
 .ProductsCatalogProducts{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
