--- a/src/components/bloks/ProductList/ProductList.css
+++ b/src/components/bloks/ProductList/ProductList.css
@@ -1,14 +1,18 @@
 .ProductListContainer {
     display: block;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 250px;
-    min-height: 250px;
-    max-heigh: 350px;
+    min-height: max-content;
+    max-heigh: max-content;
     color: rgba(0, 0, 0, 0.9);
 }
+.ProductListContainer {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 10px;
 
+}
 .ProductListContainer div {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.3rem;
@@ -26,17 +30,7 @@
     z-index: -1;
 }
 
-.ProductListContainer:before {
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -2;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    width: 250px;
-    height: 55%;
-    margin-top: -10px;
 
-}
 
 .productIcon {
     display: flex;
