--- a/src/components/bloks/ProductList/ProductList.css
+++ b/src/components/bloks/ProductList/ProductList.css
@@ -5,20 +5,22 @@
     margin-bottom: 10px;
     width: 250px;
     min-height: max-content;
-    max-heigh: max-content;
     color: rgba(0, 0, 0, 0.9);
 }
+
 .ProductListContainer {
     border: 1px solid rgba(0, 0, 0, 0.3);
     padding: 10px;
 
 }
+
 .ProductListContainer div {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.3rem;
 }
 
 .productContant {
+    margin-top: -50px;
     width: 250px;
 }
 
@@ -31,16 +33,52 @@
 }
 
 
-
 .productIcon {
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-end;
+    position: relative;
 }
 
-.productIcon {
-    position: absolute;
+.productIcon img {
+    margin-bottom: 10px;
+    cursor: pointer;
 }
-.catalogName{
+
+
+
+.catalogDiscription {
+    color: black;
+}
+
+.catalogName {
+    padding-top: 2px;
     opacity: 0.5;
+    color: black;
+
 }
+
+.lable {
+    position: absolute;
+    margin-top: -65px;
+    margin-left: 0;
+    display: flex;
+}
+
+.percentageDiscount{
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255, 134, 12, 0.9);
+    border-radius: 50%;
+    color: rgba(0, 0, 0, 0.7);
+    margin: 0 auto;
+    padding: 11px 0 0 2px ;
+    margin-right: 5px;
+}
+.giftbox{
+    margin-right: 5px;
+    width: 40px;
+    height: 40px;
+}
+
+
