--- a/src/components/bloks/ProductList/ProductList.css
+++ b/src/components/bloks/ProductList/ProductList.css
@@ -6,12 +6,14 @@
     width: 250px;
     min-height: max-content;
     color: rgba(0, 0, 0, 0.9);
+    padding: 10px;
+    transition: all 0.5s;
 }
 
-.ProductListContainer {
+.ProductListContainer:hover {
     border: 1px solid rgba(0, 0, 0, 0.3);
-    padding: 10px;
-
+    box-shadow: 5px 5px 5px 5px rgba(210, 188, 188, 0.3);
+    transition: all 0.5s;
 }
 
 .ProductListContainer div {
@@ -77,8 +79,6 @@
 }
 .giftbox{
     margin-right: 5px;
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    max-height: 40px;
 }
-
-
