--- a/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
+++ b/src/components/bloks/bloksMain/Bllock1/BlockMain1.css
@@ -8,70 +8,42 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
 .block_main_one img,
-.block_main_one div {
+.block_main_one > div {
     width: 100%;
-    min-width: 200px;
+    min-width: 250px;
     max-width: 400px;
     height: auto;
     cursor: pointer;
 }
-@media (max-width: 1037px) {
-    .block_main_one {
-        grid-template-columns: repeat(3, minmax(100px, 540px));
-    }
-    .block_main_one img,
-    .block_main_one div {
-        width: 250px;
-        height: 250px;
-        cursor: pointer;
-    }
-}
+
 
 .BlockMain1Img1,
 .BlockMain1Img3 {
-    margin-top: 80px;
+    margin-top: 50px;
 }
 .BlockMain1Img4 {
+    grid-column-start: 1;
     margin-left: 50px;
 }
 .BlockMain1Img5 {
     grid-column-start: 3;
     margin-left: -50px;
 }
-.BlockMain1Button {
-    grid-column-start: 2;
+.BlockMain1Button{
+    grid-column-start: 1;
     grid-row-start: 2;
     margin-top: -7%;
 }
 
-@media (max-width: 1037px) {
-    .block_main_one {
-        grid-template-columns: repeat(3, minmax(100px, 540px));
-    }
-    .block_main_one img,
-    .block_main_one div {
-        width: 250px;
-        height: 250px;
-        cursor: pointer;
-    }
-}
 
-@media (max-width: 882px) {
-    .block_main_one img,
-    .block_main_one div {
-        width: 200px;
-        height: 200px;
-        cursor: pointer;
-    }
-    .BlockMain1Button {
-        margin-top: -40%;
-    }
-}
-@media (max-width: 698px) {
-    .block_main_one {
-        grid-auto-rows: 1fr;
-        grid-auto-columns: 1fr;
+
+@media (max-width: 1037px) {
+    .BlockMain1Button{
+        position: absolute;
+        margin-top: 10px;
+        margin-left: 20%;
     }
     .BlockMain1Img2,
     .BlockMain1Img3,
@@ -79,11 +51,7 @@
     .BlockMain1Img5 {
         display: none;
     }
-    .BlockMain1Button {
-        grid-row: 1 /3;
-        grid-column: 1/5;
-        margin-top: 0%;
-    }
+
     .BlockMain1Img1 {
         min-width: max-content;
         min-height: max-content;
@@ -100,5 +68,13 @@
         margin-right: auto;
         width: 100%;
         height: 110%;
+    }
+}
+
+@media (max-width: 400px) {
+    .BlockMain1Button {
+        position: absolute;
+        margin-top: 10px;
+        margin-left: 0%;
     }
 }
