--- a/src/components/bloks/Thema/thema.css
+++ b/src/components/bloks/Thema/thema.css
@@ -29,3 +29,59 @@
     max-height: 40px;
   }
 }
+
+:root {
+  --light1: #d8dbe0;
+  --dark1: #28292c;
+  --link1: rgb(27, 129, 112);
+  --link-hover1: rgb(24, 94, 82);
+}
+
+.theme_lable label {
+  position: absolute;
+  width: 60px;
+  height: 30px;
+  background-color: var(--dark1);
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+theme_lable input {
+  position: absolute;
+  display: none;
+}
+
+.theme_lable_slider {
+  position: absolute;
+  width: 30px;
+  height: 60px;
+  border-radius: 50px;
+  transition: 0.3s;
+}
+
+.theme_lable input:checked ~ .theme_lable_slider {
+  background-color: var(--light1);
+}
+
+.theme_lable_slider::before {
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: 16px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  box-shadow: inset 28px -4px 0px 0px var(--light1);
+  background-color: var(--dark1);
+  transition: 0.3s;
+}
+
+.theme_lable input:checked ~ .theme_lable_slider::before {
+  transform: translateX(35px);
+  background-color: var(--dark1);
+  box-shadow: none;
+}
+
+.theme_lable a:hover {
+  color: var(--link-hover1);
+}
