--- a/src/components/bloks/Thema/thema.css
+++ b/src/components/bloks/Thema/thema.css
@@ -1,87 +1,74 @@
 .thema {
-  cursor: pointer;
-  max-width: max-content;
+    cursor: pointer;
+    max-width: max-content;
 }
+
 .thema img {
-  max-width: 20px;
-  max-height: 20px;
+    max-width: 20px;
+    max-height: 20px;
 }
 
 .my-node-enter {
-  opacity: 0;
+    opacity: 0;
 }
+
 .my-node-enter-active {
-  opacity: 1;
-  transition: all 500ms;
-  transform: scale(1) translate(50%);
+    opacity: 1;
+    transition: all 500ms;
+    transform: scale(1) translate(50%);
 }
+
 .my-node-exit {
-  opacity: 1;
+    opacity: 1;
 }
+
 .my-node-exit-active {
-  opacity: 0;
-  transition: all 500ms;
-  transform: scale(1) translate(50%);
+    opacity: 0;
+    transition: all 500ms;
+    transform: scale(1) translate(50%);
 }
+
 @media (max-width: 928px) {
-  .thema img {
-    max-width: 40px;
-    max-height: 40px;
-  }
+    .thema img {
+        max-width: 40px;
+        max-height: 40px;
+    }
 }
 
-:root {
-  --light1: #d8dbe0;
-  --dark1: #28292c;
-  --link1: rgb(27, 129, 112);
-  --link-hover1: rgb(24, 94, 82);
+
+.themeMaySwitch input[type="checkbox"] {
+    cursor: pointer;
+    position: relative;
+    width: 40px;
+    height: 20px;
+    -webkit-appearance: none;
+    background-color: #c6c6c6;
+    outline: none;
+    border-radius: 20px;
+    box-shadow: inset 0 0 0 10px rgba(0, 0, 0, .2);
+    transition: 0.2s;
 }
 
-.theme_lable label {
-  position: absolute;
-  width: 60px;
-  height: 30px;
-  background-color: var(--dark1);
-  border-radius: 50px;
-  cursor: pointer;
+.themeMaySwitch input:checked[type="checkbox"] {
+    background-color: #c6c6c6;
 }
 
-theme_lable input {
-  position: absolute;
-  display: none;
+.themeMaySwitch input[type="checkbox"]:before {
+    content: "";
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    transform: scale(1.1);
+    background-image: var(--background-image-theme);
+    background-size: cover;
+    box-shadow: inset 0 2px 10px rgba(0, 0, 0, .2);
+    transition: 0.2s;
 }
 
-.theme_lable_slider {
-  position: absolute;
-  width: 30px;
-  height: 60px;
-  border-radius: 50px;
-  transition: 0.3s;
-}
-
-.theme_lable input:checked ~ .theme_lable_slider {
-  background-color: var(--light1);
-}
-
-.theme_lable_slider::before {
-  content: "";
-  position: absolute;
-  top: 13px;
-  left: 16px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  box-shadow: inset 28px -4px 0px 0px var(--light1);
-  background-color: var(--dark1);
-  transition: 0.3s;
-}
-
-.theme_lable input:checked ~ .theme_lable_slider::before {
-  transform: translateX(35px);
-  background-color: var(--dark1);
-  box-shadow: none;
-}
-
-.theme_lable a:hover {
-  color: var(--link-hover1);
+.themeMaySwitch input:checked[type="checkbox"]:before {
+    left: 20px;
 }
