--- a/src/components/UL/MayButton/MayButton.css
+++ b/src/components/UL/MayButton/MayButton.css
@@ -9,10 +9,12 @@
     margin-bottom: 10px;
     margin-top: 15px;
 }
+
 .may_btn span {
     margin-left: 10px;
     margin-right: 10px;
 }
+
 .may_btn::after {
     content: "";
     display: block;
@@ -25,6 +27,7 @@
     z-index: -1;
     transition: all 500ms ease-in-out;
 }
+
 .may_btn:hover::after {
     content: "";
     display: block;
@@ -38,9 +41,14 @@
     transition: all 500ms ease-in-out;
     cursor: pointer;
 }
+
 .may_btn:hover {
     box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
     text-shadow: 1px 1px 2px #427388;
     cursor: pointer;
     transition: all 500ms;
+}
+
+.may_btn2 {
+    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
 }
