--- a/src/components/bloks/ProductList/ProductList.css
+++ b/src/components/bloks/ProductList/ProductList.css
@@ -27,10 +27,8 @@
 }
 
 .ProductListImg {
-    width: 100%;
-    min-width: 100px;
-    max-width: 200px;
-    height: auto;
+    width: 200px;
+    height: 200px;
     z-index: -1;
 }
 
@@ -46,7 +44,6 @@
     margin-bottom: 10px;
     cursor: pointer;
 }
-
 
 
 .catalogDiscription {
@@ -67,17 +64,18 @@
     display: flex;
 }
 
-.percentageDiscount{
+.percentageDiscount {
     width: 40px;
     height: 40px;
     background-color: rgba(255, 134, 12, 0.9);
     border-radius: 50%;
     color: rgba(0, 0, 0, 0.7);
     margin: 0 auto;
-    padding: 11px 0 0 2px ;
+    padding: 11px 0 0 2px;
     margin-right: 5px;
 }
-.giftbox{
+
+.giftbox {
     margin-right: 5px;
     max-width: 40px;
     max-height: 40px;
