--- a/src/components/bloks/Slider/Slider.css
+++ b/src/components/bloks/Slider/Slider.css
@@ -2,5 +2,9 @@
     width: 100%;
     height: 100%;
 }
-
-
+.swiper-slide1 img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
