--- a/src/pages/ProductPage/ProductImg/ProductImg.css
+++ b/src/pages/ProductPage/ProductImg/ProductImg.css
@@ -1,15 +1,5 @@
-
-.swiper {
+.productImg {
     width: 300px;
     height: 300px;
 }
 
-.swiper-slide {
-    background-position: center;
-    background-size: cover;
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-}
