--- a/src/pages/SalePages/SalePageItems/SalePageItems.css
+++ b/src/pages/SalePages/SalePageItems/SalePageItems.css
@@ -1,12 +1,12 @@
 
 .salePageConteiner{
-    width: 50%;
+    width: 300px;
     height: 300px;
     margin: 30px;
 }
 .salePageConteiner h2{
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-bottom: 5px;
 }
 .saleImg{
