--- a/src/components/UL/MayInput/mayInput.css
+++ b/src/components/UL/MayInput/mayInput.css
@@ -1,14 +1,8 @@
-.cardContainer{
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-}
-.carСlientInfo{
-    display: flex;
-    flex-direction: column;
-
+.mayInputContainer{
+    margin: 50px ;
 }
 
-.carСlientInfo label{
+.mayInputContainer label{
     position: absolute;
     margin: -10px 0 0 15px;
     background-color: white;
@@ -16,13 +10,13 @@
     padding-left: 5px;
 }
 
-.carСlientInfo input{
+.mayInputContainer input{
     border: 1px solid rgba(44, 19, 19, 0.5);
     border-radius: 5px;
     width: 150px;
     height: 20px;
 }
 
-.carСlientInfo label:hover{
+.mayInputContainer label:hover{
     cursor: pointer;
 }
